--- a/app/package.json
+++ b/app/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.15",
+    "clsx": "^2.1.1",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@savvywombat/tailwindcss-grid-areas": "^4.0.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.1",
