--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "ts-luxon": "^5.0.7-beta.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
