--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
     "@tanstack/react-query": "^5.59.15",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
