--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "ts-luxon": "^5.0.7-beta.0"
   },
   "devDependencies": {
