--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.59.15",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.9",
+    "dexie-react-hooks": "^1.1.7",
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
