--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,3 +25,7 @@ tower = { version = "0.5.1", features = ["util", "limit", "buffer"] }
 tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+[features]
+
+any-date = []
