--- a/app/package.json
+++ b/app/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
+    "@react-hook/media-query": "^1.1.1",
     "@tanstack/react-query": "^5.59.15",
     "canvas-confetti": "^1.9.3",
+    "chart.js": "^4.4.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.1",
     "dexie": "^4.0.9",
     "dexie-react-hooks": "^1.1.7",
     "immer": "^10.1.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
